[package]
name = "ks-protobuf-v3"
version = "0.1.0"
edition = "2021"
authors = [ "Paul Charles <paul_charles@hotmail.co.uk>" ]
description = "A package that implements Protocol Buffers version 3"
readme = "README.md"
repository = "https://github.com/paul-james-charles/ks-protobuf-v3"
license-file = "LICENSE"
keywords = [ "serialization", "deserialization"]

[dependencies]
thiserror = "1.0.31"

[dev-dependencies]
rstest = "0.13.0"

[features]
